--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .App {
-  text-align: center;
+  width: 75%;
+  margin: 15px auto;
+  padding: 15px;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -36,3 +45,7 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+
